--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,3 +1,6 @@
+.ebextensions/
+.git/
+
 # Logs
 logs
 *.log
@@ -59,3 +62,13 @@ typings/
 
 # next.js build output
 .next
+
+
+# Elastic Beanstalk Files
+
+.elasticbeanstalk/*
+
+!.elasticbeanstalk/*.cfg.yml
+
+!.elasticbeanstalk/*.global.yml
+
